src/test/ui/did_you_mean/issue-41679-tilde-bitwise-negation-attempt.stderr
error: `~` cannot be used as a unary operator
  --> $DIR/issue-41679-tilde-bitwise-negation-attempt.rs:2:13
   |
LL |     let x = ~1;
   |             ^ help: use `!` to perform bitwise not

error: aborting due to previous error

